<resources>
    <string name="app_name">qchat</string>

    <string name="settings">Settings</string>
    <string name="user_name">Moaz Mohamed</string>
    <string name="status_message">Footballer</string>

    <string name="account">Account</string>
    <string name="account_subtitle">Privacy, security, change number</string>

    <string name="chat">Chat</string>
    <string name="chat_subtitle">Chat history, themes, wallpapers</string>

    <string name="notifications">Notifications</string>
    <string name="notifications_subtitle">Messages, groups and others</string>

    <string name="help">Help</string>
    <string name="help_subtitle">Help center, contact us, privacy policy</string>

    <string name="storage_and_data">Storage and data</string>
    <string name="storage_subtitle">Network usage, storage usage</string>

    <string name="invite_friend">Invite a friend</string>
    <string name="invite_subtitle">Share this app with friends</string>

    <string name="nav_messages">Message</string>
    <string name="nav_calls">Calls</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_settings">Settings</string>

    <!--    registeration-->
    <string name="logo">Logo</string>
    <string name="sign_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create an Account</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="forgot_password">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login_to_continue">Login to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="create_new_account">Create an Account ?</string>
    <string name="add_image">Choose Image</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="search_user">Search User</string>
    <string name="type_a_message">Type a message...</string>
    <string name="online">Online</string>
    <string name="sign_out">Sign out</string>
    <string name="key">BDv0FJpjIoqmTCktFBrbJ-2AR6QnWavi2kcLpJKhZF5xvYNbNFtxJnFtZb2zdSSMrc_spoF582pnjfdiHy0DlEU</string>
    <string name="firebase_server_key">BDv0FJpjIoqmTCktFBrbJ-2AR6QnWavi2kcLpJKhZF5xvYNbNFtxJnFtZb2zdSSMrc_spoF582pnjfdiHy0DlEU</string>


    <string name="photos">Photos</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>

    <string name="profile_image">Profile Image</string>

    <string name="username">Mariam</string>
    <string name="total_people">6 People</string>
    <string name="status_text">Available</string>

    <string name="media">Media</string>
    <string name="nickname">Nickname</string>
    <string name="block_user">Block User</string>
    <string name="report_spam">Report Spam</string>
    <string name="disappearing_messages_icon">Disappearing Messages Icon</string>
    <string name="nickname_icon">Nickname Icon</string>
    <string name="block_user_icon">Block User Icon</string>
    <string name="report_spam_icon">Report Spam Icon</string>
    <string name="arrow_icon">Arrow Icon</string>

    <string name="save">Save</string>
    <string name="change_photo">Change Photo</string>
    <string name="cancel">Cancel</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_messages">New Message</string>

    <string name="default_notification_channel_id">fcm_default_channel</string>

</resources>
