<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.profile.EditProfileActivity">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:contentDescription="Back Button"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <!-- Title ("Profile Settings") -->
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/nimbus_san_bolt"
        android:text="Profile Settings"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <!-- White Rounded Foreground (Profile Settings UI) -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="780dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:shapeAppearanceOverlay="@style/TopRoundedCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Profile Image -->
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile"
                app:riv_oval="true"
                app:riv_border_width="2dp"
                app:riv_border_color="@color/black"
                android:contentDescription="@string/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

            <!-- Change Photo Button -->
            <Button
                android:id="@+id/btnChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@color/new_primary"
                app:layout_constraintTop_toBottomOf="@id/ivProfileImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <!-- Name Field -->
            <!-- Name Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/btnChangePhoto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tilName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Current Password Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCurrentPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tilEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCurrentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- New Password Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tilCurrentPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Save and Cancel Buttons -->
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/cancel"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@color/new_primary"
                app:layout_constraintTop_toBottomOf="@id/tilNewPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSave"
                app:layout_constraintWidth_percent="0.4"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/save"
                android:backgroundTint="@color/new_primary"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/tilNewPassword"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.4"
                android:layout_marginStart="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
